# devbcn-workshop

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  Shuttle.toml  api.http
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs
api/lib/src/film_repository/: mod.rs  postgres_film_repository.rs
api/lib/tests/: health.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
shared/: Cargo.toml
shared/src/: models.rs
