[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.24.0"
shuttle-runtime = "0.24.0"
tokio = "1.26.0"
# database
sqlx = { version = "0.7.1", features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "runtime-tokio-native-tls",
] }
shuttle-shared-db = { version = "0.24.0", features = ["postgres"] }
